--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-index.html
-center.html
-JodelClientPHP
-jodel_api
-jodel-web
-composer.json
+stuff
 .idea
-emoji.html
-Logo-Bielefeld-jetzt-156.jpg
-twemoji.min.js
 node_modules
+build
